--- a/internal/pkg/generator/tmpl/octopus/mock.tmpl
+++ b/internal/pkg/generator/tmpl/octopus/mock.tmpl
@@ -18,6 +18,7 @@ import (
 {{ $PublicStructName := .ARPkgTitle -}}
 {{ $fields := .FieldList }}
 {{ $procfields := .ProcOutFieldList }}
+{{ $procInLen := len .ProcInFieldList }}
 {{ $serializers := .Serializers -}}
 {{ $fidx := .FieldMap }}
 
@@ -40,15 +41,15 @@ func (obj *{{ $PublicStructName }}) MockSelectResponse() ([][]byte, error) {
 	return tuple, nil
 }
 
-func MockCallRequest(ctx context.Context, params {{ $PublicStructName }}Params) []byte {
+func MockCallRequest(ctx context.Context{{ if ne $procInLen 0 }}, params {{ $PublicStructName }}Params{{ end }}) []byte {
 	log := activerecord.Logger()
-	ctx = log.SetLoggerValueToContext(ctx, map[string]interface{}{"MockCallRequest": params, "Proc": "{{ $PublicStructName }}"})
+	ctx = log.SetLoggerValueToContext(ctx, map[string]interface{}{ {{ if ne $procInLen 0 }}"MockCallRequest": params, {{ end }}"Proc": "{{ $PublicStructName }}"})
 
-	return octopus.PackLua(procName, params.arrayValues()...)
+	return octopus.PackLua(procName{{ if ne $procInLen 0 }}, params.arrayValues()...{{ end }})
 }
 
 func (obj *{{ $PublicStructName }}) RepoSelector(ctx context.Context) (any, error) {
-	data, err := Call(ctx, obj.params)
+	data, err := Call(ctx{{ if ne $procInLen 0 }}, obj.params{{ end }})
 	if err != nil {
 		return nil, err
 	}
@@ -60,12 +61,13 @@ func (obj *{{ $PublicStructName }}) RepoSelector(ctx context.Context) (any, erro
 	return data, err
 }
 
-func CallMockerLogger(params {{ $PublicStructName }}Params, res {{ $PublicStructName }}List) func() (activerecord.MockerLogger, error) {
+func CallMockerLogger({{ if ne $procInLen 0 }}params {{ $PublicStructName }}Params, {{ end }}res {{ $PublicStructName }}List) func() (activerecord.MockerLogger, error) {
 return func() (activerecord.MockerLogger, error){
 
 		mockerName := "mocker{{ $PublicStructName }}ByParams"
 		mocker := "fixture.Get{{ $PublicStructName }}ProcedureMocker()"
 
+        {{ if ne $procInLen 0 }}
         fixture := "ps := {{$PublicStructName}}Params{ \n"
         {{- range $ind, $fstruct := .ProcInFieldList }}
             fixture += "{{$fstruct.Name}}: params.{{$fstruct.Name}},\n"
@@ -73,6 +75,10 @@ return func() (activerecord.MockerLogger, error){
         fixture += "}\n"
 		fixture += mocker
 		fixture += ".ByFixtureParams(ctx, ps)"
+		{{ else }}
+		fixture := mocker
+		fixture += ".ByFixture(ctx)"
+		{{ end }}
 
 		return activerecord.MockerLogger{MockerName: mockerName, Mockers: mocker, FixturesSelector: fixture, ResultName: "{{ $pkgName }}", Results: res}, nil
 	}
