--- a/internal/pkg/generator/tmpl/meta.tmpl
+++ b/internal/pkg/generator/tmpl/meta.tmpl
@@ -76,76 +76,136 @@ var NamespacePackages = NSPackage {
 {{ end }}
 }
 
-func (n NSPackage) GetSelectDebugInfo(ns uint32, indexnum uint32, offset uint32, limit uint32, keys [][][]byte) string {
-    spacemeta, ex := n.meta(ns)
-    if !ex {
-        return fmt.Sprintf("unknown space %d, index: %d, offset: %d, limit: %d, Keys: %+v", ns, indexnum, offset, limit, keys)
-    }
+func (n NSPackage) GetSelectDebugInfo(ns uint32, indexnum uint32, offset uint32, limit uint32, keys [][][]byte, fixture ...octopus.SelectMockFixture) string {
+	spacemeta, ex := n.meta(ns)
+	if !ex {
+		return fmt.Sprintf("unknown space %d, index: %d, offset: %d, limit: %d, Keys: %+v", ns, indexnum, offset, limit, keys)
+	}
 
-    ind, ex := spacemeta.Indexes[fmt.Sprintf("%d.%d", indexnum, len(keys[0]))]
-    if !ex {
-        return fmt.Sprintf("space %d (%s), unknown index: %d (%d.%d), offset: %d, limit: %d, Keys: %+v", ns, spacemeta.PackageName, indexnum, indexnum, len(keys[0]), offset, limit, keys)
-    }
+	fmtStr := "\n\n\n Select Request // " + n.formatSelectMockFixture(ns, spacemeta, indexnum, offset, limit, keys) + " //\n"
+	fmtStr = fmt.Sprintf("%s\n-------Dump all %s 'Select' fixtures-------\n", fmtStr, spacemeta.PackageName)
+	for _, f := range fixture {
+		fmtStr = fmtStr + "\n" + n.formatSelectMockFixture(ns, spacemeta, f.Indexnum, f.Offset, f.Limit, f.Keys) + " \n"
 
-    unpackedKeys, err := ind.Unpacker(keys)
-    if err != nil {
-    	return fmt.Sprintf("Space: %d (%s), index: %d (%s), offset: %d, limit: %d, Keys: %+v (error unpack: %s)", ns, spacemeta.PackageName, indexnum, ind.Name, offset, limit, keys, err)
-    }
+		for _, tuple := range f.RespTuples {
+			strRespObj, err := spacemeta.Unpacker(context.TODO(), tuple)
+			if err != nil {
+				return fmt.Sprintf("Space: %d (%s), tuple: %+v (err unpack: %s)", ns, spacemeta.PackageName, tuple, err)
+			}
+
+			fmtStr = fmtStr + "\n" + fmt.Sprintf("%s", strRespObj) + "\n"
+
+		}
+	}
+
+	fmtStr = fmtStr + "------------------------------------------------\n\n\n\n"
+
+	return fmtStr
+}
+
+func (n NSPackage) formatSelectMockFixture(ns uint32, spacemeta SpaceMeta, indexnum uint32, offset uint32, limit uint32, keys [][][]byte) string {
+	ind, ex := spacemeta.Indexes[fmt.Sprintf("%d.%d", indexnum, len(keys[0]))]
+	if !ex {
+		return fmt.Sprintf("space %d (%s), unknown index: %d (%d.%d), offset: %d, limit: %d, Keys: %+v", ns, spacemeta.PackageName, indexnum, indexnum, len(keys[0]), offset, limit, keys)
+	}
+
+	unpackedKeys, err := ind.Unpacker(keys)
+	if err != nil {
+		return fmt.Sprintf("Space: %d (%s), index: %d (%s), offset: %d, limit: %d, Keys: %+v (error unpack: %s)", ns, spacemeta.PackageName, indexnum, ind.Name, offset, limit, keys, err)
+	}
 
 	return fmt.Sprintf("Space: %d (%s), index: %d (%s), offset: %d, limit: %d, Keys: %+v", ns, spacemeta.PackageName, indexnum, ind.Name, offset, limit, unpackedKeys)
 }
 
-func (n NSPackage) GetUpdateDebugInfo(ns uint32, primaryKey [][]byte, updateOps []octopus.Ops) string {
-    spacemeta, ex := n.meta(ns)
-    if !ex {
-        return fmt.Sprintf("unknown space %d, primaryKey: %+v, updateOps: %+v", ns, primaryKey, updateOps)
-    }
+func (n NSPackage) GetUpdateDebugInfo(ns uint32, primaryKey [][]byte, updateOps []octopus.Ops, fixture ...octopus.UpdateMockFixture) string {
+	spacemeta, ex := n.meta(ns)
+	if !ex {
+		return fmt.Sprintf("unknown space %d, primaryKey: %+v, updateOps: %+v", ns, primaryKey, updateOps)
+	}
 
-    unpackedKeys, err := spacemeta.PK.Unpacker([][][]byte{primaryKey})
-    if err != nil {
-    	return fmt.Sprintf("Space: %d (%s), primaryKey: %+v, updateOps: %+v (error unpack: %s)", ns, spacemeta.PackageName, primaryKey, updateOps, err)
-    }
+	fmtStr := "\n\n\n Update Request // " + n.formatUpdateMockFixture(ns, spacemeta, primaryKey, updateOps) + " //\n"
+	fmtStr = fmt.Sprintf("%s\n-------Dump all %s 'Update' fixtures-------\n", fmtStr, spacemeta.PackageName)
+	for _, f := range fixture {
+		fmtStr = fmtStr + "\n" + n.formatUpdateMockFixture(ns, spacemeta, f.PrimaryKey, f.UpdateOps) + "\n"
+	}
 
-    updateFields := ""
+	fmtStr = fmtStr + "------------------------------------------------\n\n\n\n"
 
-    for _, op := range updateOps {
-        val, err := spacemeta.Fields[op.Field].Unpacker(op.Value)
-        if err != nil {
-            val = fmt.Sprintf("% X (can't unpack: %s)", op.Value, err)
-        }
-        
-        updateFields += fmt.Sprintf("%s %s <= `%v`; ", octopus.GetOpCodeName(op.Op), spacemeta.Fields[op.Field].Name, val)
-    }
+	return fmtStr
+}
+
+func (n NSPackage) formatUpdateMockFixture(ns uint32, spacemeta SpaceMeta, primaryKey [][]byte, updateOps []octopus.Ops) string {
+	unpackedKeys, err := spacemeta.PK.Unpacker([][][]byte{primaryKey})
+	if err != nil {
+		return fmt.Sprintf("Space: %d (%s), primaryKey: %+v, updateOps: %+v (error unpack: %s)", ns, spacemeta.PackageName, primaryKey, updateOps, err)
+	}
+
+	updateFields := ""
+
+	for _, op := range updateOps {
+		val, err := spacemeta.Fields[op.Field].Unpacker(op.Value)
+		if err != nil {
+			val = fmt.Sprintf("% X (can't unpack: %s)", op.Value, err)
+		}
+
+		updateFields += fmt.Sprintf("%s %s <= `%v`; ", octopus.GetOpCodeName(op.Op), spacemeta.Fields[op.Field].Name, val)
+	}
 
 	return fmt.Sprintf("Space: %d (%s), primaryKey: %s (%+v), updateOps: %s", ns, spacemeta.PackageName, spacemeta.PK.Name, unpackedKeys, updateFields)
 }
 
-func (n NSPackage) GetDeleteDebugInfo(ns uint32, primaryKey [][]byte) string {
-    spacemeta, ex := n.meta(ns)
-    if !ex {
-        return fmt.Sprintf("unknown space %d, primaryKey: %+v", ns, primaryKey)
-    }
+func (n NSPackage) GetDeleteDebugInfo(ns uint32, primaryKey [][]byte, fixture ...octopus.DeleteMockFixture) string {
+	spacemeta, ex := n.meta(ns)
+	if !ex {
+		return fmt.Sprintf("unknown space %d, primaryKey: %+v", ns, primaryKey)
+	}
 
-    unpackedKeys, err := spacemeta.PK.Unpacker([][][]byte{primaryKey})
-    if err != nil {
-    	return fmt.Sprintf("Space: %d (%s), primaryKey: %+v (error unpack: %s)", ns, spacemeta.PackageName, primaryKey, err)
-    }
+	fmtStr := "\n\n\n Delete Request // " + n.formatDeleteMockFixture(ns, spacemeta, primaryKey) + " //\n"
+	fmtStr = fmt.Sprintf("%s\n-------Dump all %s 'Delete' fixtures-------\n", fmtStr, spacemeta.PackageName)
+	for _, f := range fixture {
+		fmtStr = fmtStr + "\n" + n.formatDeleteMockFixture(ns, spacemeta, f.PrimaryKey) + "\n"
+	}
+
+	fmtStr = fmtStr + "------------------------------------------------\n\n\n\n"
+
+	return fmtStr
+}
+
+func (n NSPackage) formatDeleteMockFixture(ns uint32, spacemeta SpaceMeta, primaryKey [][]byte) string {
+	unpackedKeys, err := spacemeta.PK.Unpacker([][][]byte{primaryKey})
+	if err != nil {
+		return fmt.Sprintf("Space: %d (%s), primaryKey: %+v (error unpack: %s)", ns, spacemeta.PackageName, primaryKey, err)
+	}
 
 	return fmt.Sprintf("Space: %d (%s), primaryKey: %s (%+v)", ns, spacemeta.PackageName, spacemeta.PK.Name, unpackedKeys)
 }
 
-func (n NSPackage) GetInsertDebugInfo(ns uint32, needRetVal bool, insertMode octopus.InsertMode, tuple octopus.TupleData) string {
-    strMode := octopus.GetInsertModeName(insertMode)
+func (n NSPackage) GetInsertDebugInfo(ns uint32, needRetVal bool, insertMode octopus.InsertMode, tuple octopus.TupleData, fixture ...octopus.InsertMockFixture) string {
+	strMode := octopus.GetInsertModeName(insertMode)
 
-    spacemeta, ex := n.meta(ns)
-    if !ex {
-        return fmt.Sprintf("unknown space %d, insertMode: %s, tuple: %+v", ns, strMode, tuple)
-    }
+	spacemeta, ex := n.meta(ns)
+	if !ex {
+		return fmt.Sprintf("unknown space %d, insertMode: %s, tuple: %+v", ns, strMode, tuple)
+	}
 
-    strObj, err := spacemeta.Unpacker(context.TODO(), tuple)
-    if err != nil {
-        return fmt.Sprintf("Space: %d (%s), insertMode: %s, tuple: %+v (err unpack: %s)", ns, spacemeta.PackageName, strMode, tuple, err)
-    }
+	fmtStr := "\n\n\n Insert Request // " + n.formatInsertMockFixture(ns, spacemeta, needRetVal, insertMode, tuple) + " //\n"
+	fmtStr = fmt.Sprintf("%s\n-------Dump all %s 'Insert' fixtures-------\n", fmtStr, spacemeta.PackageName)
+	for _, f := range fixture {
+		fmtStr = fmtStr + "\n" + n.formatInsertMockFixture(ns, spacemeta, f.NeedRetVal, f.InsertMode, f.Tuple) + "\n"
+	}
+
+	fmtStr = fmtStr + "------------------------------------------------\n\n\n\n"
+
+	return fmtStr
+}
+
+func (n NSPackage) formatInsertMockFixture(ns uint32, spacemeta SpaceMeta, needRetVal bool, insertMode octopus.InsertMode, tuple octopus.TupleData) string {
+	strMode := octopus.GetInsertModeName(insertMode)
+
+	strObj, err := spacemeta.Unpacker(context.TODO(), tuple)
+	if err != nil {
+		return fmt.Sprintf("Space: %d (%s), insertMode: %s, tuple: %+v (err unpack: %s)", ns, spacemeta.PackageName, strMode, tuple, err)
+	}
 
 	return fmt.Sprintf("Space: %d (%s), insertMode: %s, tuple: \n%s", ns, spacemeta.PackageName, strMode, strObj)
 }
