delete-fixtures-support: add delete fixtures support

--- a/internal/pkg/generator/tmpl/octopus/fixture.tmpl
+++ b/internal/pkg/generator/tmpl/octopus/fixture.tmpl
@@ -283,3 +283,7 @@ func SetFixtureUpdateOptions(obj *{{$PublicStructName}}, updateOptions  []{{$Pub
     }
 }
 {{ end }}
+
+func UnmarshalDeleteFixtures(source []byte) []*{{$PublicStructName}} {
+	return UnmarshalFixtures(source)
+}
