--- a/internal/pkg/generator/tmpl/octopus/mock.tmpl
+++ b/internal/pkg/generator/tmpl/octopus/mock.tmpl
@@ -351,6 +351,24 @@ func (obj *{{ $PublicStructName }}) MockUpdate(ctx context.Context) []byte {
     return w
 }
 
+func (obj *{{ $PublicStructName }}) MockDelete(ctx context.Context) []byte {
+    log := activerecord.Logger()
+
+    ctx = log.SetLoggerValueToContext(ctx, map[string]interface{}{"MockDelete": obj.PrimaryString(), "Repo": "{{$PublicStructName}}"})
+
+    pk, err := obj.packPk()
+    if err != nil {
+        log.Fatal(ctx, err)
+        return nil
+    }
+
+    w := octopus.PackDelete(namespace, pk)
+
+    log.Debug(ctx, fmt.Sprintf("Delete packed tuple: '%X'\n", w))
+
+    return w
+}
+
 func (obj *{{ $PublicStructName }}) MockInsertOrReplace(ctx context.Context) []byte {
     return obj.mockInsertReplace(ctx, octopus.InsertModeInserOrReplace)
 }
